--- a/index.html
+++ b/index.html
@@ -210,8 +210,8 @@
         <div class="contact__glow" aria-hidden="true"></div>
 
         <h2 class="contact__title">Contacto</h2>
-        <a href="mailto:student@tripleten.com" class="contact__email"
-          >student@tripleten.com</a
+        <a href="mailto:dagmapo@gmail.com" class="contact__email"
+          >dagmapo@gmail.com</a
         >
 
         <div class="contact__social" id="contact">
